Fix horizontal scrollbar on unleashed animation

--- a/app/scss/animations.scss
+++ b/app/scss/animations.scss
@@ -22,6 +22,7 @@
   -webkit-animation-name: $name;
   animation-name: $name;
   white-space: nowrap;
+  overflow: hidden;
 
   @include keyframes($name) {
     0% {
